--- a/module3/index.html
+++ b/module3/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="la" xml:lang="la">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     
@@ -38,6 +37,7 @@
             </li>
             <li class="text-center sushi-item">
               <a href="#sushi-div"><p class="item">Sushi</p></a>
+              <hr class="visible-xs">
             </li>
           </ul> 
         </div>
@@ -80,7 +80,7 @@
     </div>
     </div>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 </body>
